// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tag Default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    THIS IS A TAG
  </div>
</div>
`;

exports[`Storyshots Tag Disabled 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
  background-color: rgba(0,0,0,0.32);
  pointer-events: none;
  padding: 6px 14px 8px 15px;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    disabled={true}
    type="SECONDARY"
  >
    THIS IS A TAG
  </div>
</div>
`;

exports[`Storyshots Tag Disabled Size 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 1px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c1:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c1 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  cursor: pointer;
}

.c1:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  color: white;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 1px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
  background-color: rgba(0,0,0,0.32);
  pointer-events: none;
  padding: 6px 14px 8px 15px;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "marginTop": "20px",
    }
  }
>
  Those two should have the same width
  <div
    className="c0"
    disabled={true}
    type="SECONDARY"
  >
    THIS IS A TAG
  </div>
  <div
    className="c1"
    type="SECONDARY"
  >
    THIS IS A TAG
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="c2"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Empty tag 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  />
</div>
`;

exports[`Storyshots Tag Multiple tags 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 1px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 1px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
  background-color: rgba(0,0,0,0.32);
  pointer-events: none;
  padding: 6px 14px 8px 15px;
}

.c4:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c4 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c4:hover .close-icon,
.c4:focus .close-icon {
  cursor: pointer;
}

.c4:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c4:hover .close-icon,
.c4:focus .close-icon {
  color: white;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c5:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c5 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c5:hover .close-icon,
.c5:focus .close-icon {
  cursor: pointer;
}

.c5:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c5:hover .close-icon,
.c5:focus .close-icon {
  color: white;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
  background-color: rgba(0,0,0,0.32);
  pointer-events: none;
  padding: 6px 14px 8px 15px;
}

.c3:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c3 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c3:hover .close-icon,
.c3:focus .close-icon {
  cursor: pointer;
}

.c3:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c3:hover .close-icon,
.c3:focus .close-icon {
  color: white;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #f6f8f9;
  color: #59636f;
}

.c2:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c2 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c2:hover .close-icon,
.c2:focus .close-icon {
  cursor: pointer;
}

.c2:hover {
  background-color: rgba(0,0,0,0.16);
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    Aug 16, 2018
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="c0"
    type="SECONDARY"
  >
    This is a long removable tag
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="c2"
    type="NEUTRAL"
  >
    Neutral tag
  </div>
  <div
    className="c3"
    disabled={true}
    type="SECONDARY"
  >
    Disabled tag
  </div>
  <div
    className="c4"
    disabled={true}
    type="SECONDARY"
  >
    Disabled removable
  </div>
  <div
    className="c5"
    type="SECONDARY"
  >
    And that's an even bigger and wider not removable tag
  </div>
</div>
`;

exports[`Storyshots Tag Neutral 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #f6f8f9;
  color: #59636f;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  background-color: rgba(0,0,0,0.16);
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="NEUTRAL"
  >
    THIS IS A TAG
  </div>
</div>
`;

exports[`Storyshots Tag Neutral removable 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 1px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #f6f8f9;
  color: #59636f;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  background-color: rgba(0,0,0,0.16);
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="NEUTRAL"
  >
    You can remove this tag
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Removable 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 1px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    You can remove this tag
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Removable disabled 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 1px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
  background-color: rgba(0,0,0,0.32);
  pointer-events: none;
  padding: 6px 14px 8px 15px;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    disabled={true}
    type="SECONDARY"
  >
    You can remove this tag. NOT!
  </div>
</div>
`;

exports[`Storyshots Tag Removable with icon 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 1px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    <div
      className="icon"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M29.666 11.437a1 1 0 01.334.746V32a1 1 0 01-1 1H11a1 1 0 01-1-1V8a1 1 0 011-1h13.313a1 1 0 01.666.254l4.687 4.183zM28 13h-4V9.061L23.932 9H12v22h16V13zm-13 4.25a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15zm0 3a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15zm0 3a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    Tag with icon
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Removable with value 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 1px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    Removable Tag #1
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag With children 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    <div
      style={
        Object {
          "width": "auto",
        }
      }
    >
      <img
        alt="picsum"
        src="https://picsum.photos/200?image=0"
        style={
          Object {
            "width": "8px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag With icon 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    <div
      className="icon"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
        >
          <path
            d="M29.666 11.437a1 1 0 01.334.746V32a1 1 0 01-1 1H11a1 1 0 01-1-1V8a1 1 0 011-1h13.313a1 1 0 01.666.254l4.687 4.183zM28 13h-4V9.061L23.932 9H12v22h16V13zm-13 4.25a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15zm0 3a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15zm0 3a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
    Tag with icon
  </div>
</div>
`;

exports[`Storyshots Tag extended style 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0 7px 7px;
}

.c0 .icon {
  font-size: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 20px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

.c1 {
  background: chartreuse;
  color: magenta;
  border: inset 4px skyblue;
  border-radius: 16px;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0 c1"
    type="SECONDARY"
  >
    THIS IS A TAG
  </div>
</div>
`;
